fix: increase space on mobile navigation

--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,8 @@
 .navigation-list {
 	display: flex;
 	flex-direction: column;
+	gap: var(--space-4);
+	padding: var(--space-4);
 	position: absolute;
 	width: var(--w-12);
 	background-color: var(--blue-medium);
@@ -349,6 +351,8 @@ a:hover {
 	}
 	.navigation-list {
 		flex-direction: row;
+		gap: 0;
+		padding: 0;
 		visibility: visible;
 		opacity: 100%;
 		position: static;
